<resources>
    <string name="app_name">Eco Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best">best</string>
    <string name="popular">popular</string>
    <string name="new_product">new</string>
    <string name="home">خانه</string>
    <string name="collections">دسته بندی ها</string>
    <string name="user">پروفایل</string>
    <string name="description">مشخصات</string>
    <string name="averageRating"> میانگین امتیاز :</string>
    <string name="ratingCount">نظر کاربران :</string>
    <string name="shortDescription"> شرح :</string>
    <string name="weight">. وزن :</string>
    <string name="status">ویژگی های محصول</string>
    <string name="bestProducts">بهترین ها</string>
    <string name="popularProducts">محبوب ترین ها</string>
    <string name="newProducts">جدید ترین ها</string>
    <string name="todo">TODO</string>
    <string name="tag">بر چسب :</string>
    <string name="categories">دسته بندی :</string>
    <string name="similarProducts">محصولات مشابه</string>
    <string name="tryAgain">تلاش دوباره</string>
    <string name="add_to_buy">افزودن به سبد خرید</string>
    <string name="shopping">سبد خرید</string>
    <string name="ShoppingSummary">خلاصه خرید</string>
    <string name="prices">قیمت کالاها</string>
    <string name="salePrices">تخفیف کالاها</string>
    <string name="TotalPurchase">جمع سبد خرید</string>
</resources>